--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <button type="submit" id="sendBtn" data-en="Send Feedback Now!" data-id="Kirim Masukan Sekarang!"></button>
     </form>
 
-    <p class="tiny" data-en="Created by: Mash :)" data-id="Dibuat oleh: Mash :)"></p>
+    <p class="tiny" data-en="Created by: Mash 🤑🤑" data-id="Dibuat oleh: Mash :)"></p>
   </div>
 </body>
 </html>
